manifests/base/microservices/payment/payment-np.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: payment-access
  namespace: sock-shop
spec:
  podSelector:
    matchLabels:
      app: payment
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: orders
    ports:
    - protocol: TCP
      port: 8080
